# frontend

./: .eslintcache  .eslintignore  .eslintrc-for-js.js  .eslintrc.js  .eslintrc.json  .eslintrc.ts  .fleek.json  .gitignore  .graphqlrc.ts  README.md  capacitor.config.ts  eslintrc-for-js.ts  eslintrc.ts  forge.config.js  forge.config.ts  global.d.ts  ionic.config.json  jest-puppeteer.config.js  jest-puppeteer.config.test.ts  jest-puppeteer.config.ts  jest.config.ts  jest.d.ts  jest.integration.config.ts  justfile  next.config.js  next.config.ts  nginx.conf  package.json  tsconfig.json  tsconfig.nextjs.json  vite.config.ts  webpack.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  codeql-analysis.yml  codeql.yml  docker-publish.yml
.storybook/: main.ts
android/: build.gradle
android/app/: build.gradle
dockerfiles/osFree/: Dockerfile.mac
dockerfiles/web/: Dockerfile.web  Dockerfile.web.dev
ios/App/App/: Info.plist  capacitor.config.json
ios/App/App.xcodeproj/: project.pbxproj
source/: emotion.d.ts
source/e2e/: index.integration.test.ts
source/main/: index.ts
source/main/prisma/: mongodb.prisma  postgresql.prisma  sqlite.prisma
source/main/rest/: index.ts
source/native-addon-go/: go.mod  go.sum  main.go  package.json
source/native-addon-python/: requirements.txt
source/native-addon-python/source/: index.py
source/native-addon-rust/: Cargo.toml  package.json
source/native-addon-rust/src/: lib.rs
source/preload/: index.ts
source/renderer/: index.astro  index.tsx
source/wasm-go/: go.mod
(+227 files in other folders)
