[package]
name = "native-addon-rust"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["./destination/index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
sentry = "0.27.0"
uint = "0.9.4"
sysinfo = "0.28.4"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
